# export-data-dictionary

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  Dockerfile  README.md  configs.py.default  export.py  export_mssql.py  generate.py  mssql_connector.py  mysql_connector.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: pylint.yml  security.yml
tests/: conftest.py  test_generate.py  test_mssql_connector.py  test_mysql_connector.py
